# siderunner

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  example.json  test.bash
.github/workflows/: ci.yml
examples/: wiki.rs  wiki.side  wiki_fantoccini.rs
js_lib/: answerOnNextPrompt.js  replaceAlertMethod.js  setNextConfirmationState.js
src/: error.rs  js_lib.rs  lib.rs  parser.rs  playground.rs  playground_test.rs  runner.rs  runner_test.rs  validation.rs
src/command/: add_selection.rs  answer_on_next_prompt.rs  assert.rs  assert_alert.rs  assert_checked.rs  assert_confirmation.rs  assert_editable.rs  assert_element_present.rs  assert_prompt.rs  assert_selected_label.rs  assert_selected_value.rs  assert_text.rs  assert_title.rs  assert_value.rs  check.rs  choose_on_next_.rs  choose_on_next_confirmation.rs  click.rs  close.rs  double_click.rs  echo.rs  edit_content.rs  execute.rs  execute_async.rs  mod.rs  mouse.rs  open.rs  pause.rs  remove_selection.rs  run_script.rs  select.rs  send_keys.rs  set_window_size.rs  store.rs  store_attribute.rs  store_json.rs  store_text.rs  store_title.rs  store_value.rs  store_xpath_count.rs  (+5 more)
src/webdriver/: fantoccini.rs  mod.rs  thirtyfour.rs
tests/: all.rs
tests/resources/basic/: index.xhtml  test.side.json
tests/resources/commands/add selection/: index.xhtml  test.side.json
tests/resources/commands/answer on next prompt/: test.side.json
tests/resources/commands/assert/: index.xhtml  test.side.json
tests/resources/commands/assert alert/: test.side.json
tests/resources/commands/assert checked/: index.xhtml  test.side.json
tests/resources/commands/assert confirmation/: test.side.json
tests/resources/commands/assert element editable/: index.xhtml  test.side.json
tests/resources/commands/assert element not editable/: test.side.json
tests/resources/commands/assert element not present/: test.side.json
tests/resources/commands/assert element present/: test.side.json
tests/resources/commands/assert not checked/: test.side.json
tests/resources/commands/assert not selected value/: test.side.json
tests/resources/commands/assert not text/: test.side.json
tests/resources/commands/assert prompt/: test.side.json
tests/resources/commands/assert selected label/: test.side.json
tests/resources/commands/assert selected value/: index.xhtml  test.side.json
tests/resources/commands/assert text/: test.side.json
tests/resources/commands/assert title/: test.side.json
tests/resources/commands/assert value/: index.xhtml  test.side.json
tests/resources/commands/check/: index.xhtml  test.side.json
tests/resources/commands/click at/: index.js  (+1 more)
tests/resources/open relative url/: test.side.json
(+27 files in other folders)
