[package]
name = "siderunner"
version = "0.1.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"

[features]
default = ["thirtyfour_backend"]
fantoccini_backend = ["fantoccini"]
thirtyfour_backend = ["thirtyfour"]

[dependencies]
fantoccini = { version = "0.17.4", optional = true }
thirtyfour = { version = "0.25.0", optional = true }
tokio = { version = "1.6.1", features = ["sync", "time", "macros"] }
serde_json = "*"
serde = "*"
regex = "*"
async-trait = "0.1"
url = "*"

[dev-dependencies]
tokio = { version = "1.6.1", features = ["full"] }
