[package]
name = "siderunner"
version = "0.1.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"
description = "A library for execution of .side files produced by Selenium IDE"
repository = "https://github.com/Plato-solutions/siderunner"
homepage = "https://github.com/Plato-solutions/siderunner"
documentation = "https://docs.rs/siderunner"
license = "MPL-2.0"
readme = "README.md"
keywords = ["selenium", "automation", "automation-selenium", "side", "testing"]
categories = ["development-tools::testing"]

[features]
default = ["thirtyfour_backend"]
fantoccini_backend = ["fantoccini"]
thirtyfour_backend = ["thirtyfour"]

[dependencies]
fantoccini = { version = "0.17.4", optional = true }
thirtyfour = { version = "0.25.0", optional = true }
tokio = { version = "1.6.1", features = ["sync", "time", "macros"] }
serde_json = "1.0.64"
serde = "1.0.126"
regex = "1.5.4"
url = "2.2.2"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.6.1", features = ["full"] }
